refactor: simplify `SellerServiceTest` and improve test consistency
- Consolidated imports by using wildcard for entity classes.
- Streamlined test preparations by removing redundant comments and reusing builders/mocks.
- Replaced deprecated method calls with updated alternatives for cleaner implementation.